@@ -1,3 +1,9 @@
+Thu Apr 18 12:42:46 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
+          Check if transport config exists before trying to create it,
+          fixes ResetTopic tests
+
 Thu Apr 18 10:25:57 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/tutorials/Shapes/Tutorial/06_compilation.html:
